--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,16 @@ html
   body
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
       .navbar-brand Myapp
+
+      ul.navbar-nav.ml-auto
+        - if current_user
+          li.nav-item= link_to 'レシピ一覧', recipes_path, class: 'nav-link'
+          - if current_user.admin?
+            li.nav-item= link_to 'ユーザー一覧', admin_users_path, class: 'nav-link'
+          li.nav-item= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link'
+        - else
+          li.nav-item= link_to 'ログイン', login_path, class: 'nav-link'
+      
     .container
       - if flash.notice.present?
         .alert.alert-success= flash.notice
