--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -1,7 +1,7 @@
 h1 ユーザーの詳細
 
 .nav.justyfy-content-end
-  = link_to  "一覧", admin_users_path, class: 'nav-link'
+  = link_to  "一覧", admin_user_path, class: 'nav-link'
 table.table.table-hover
   tbody
     tr
