--- a/app/views/recipes/index.html.slim
+++ b/app/views/recipes/index.html.slim
@@ -1,6 +1,6 @@
 h1 レシピ一覧
 
-= link_to "新規登録",  new_recipe_path, class: 'btn-primary'
+= link_to "新規登録",  new_recipe_path, class: 'btn btn-primary'
 
 .mb-3
 table.table.table-hover
@@ -8,12 +8,14 @@ table.table.table-hover
     tr
       th= Recipe.human_attribute_name(:name)
       th= Recipe.human_attribute_name(:created_at)
+      th= Recipe.human_attribute_name(:updated_at)
       th
   tbody
     - @recipes.each do |recipe|
       tr
-        td= link_to recipe.name, recipe
-        td= recipe.created_at
+        th= link_to recipe.name, recipe
+        td= l recipe.created_at, format: :short
+        td= l recipe.updated_at, format: :short
         td
-          = link_to '編集', edit_recipe_path(recipe), class: 'btn btn-primary mr-3'
+          = link_to '編集', edit_recipe_path(recipe), class: 'btn btn-primary mr-md-3'
           = link_to '削除', recipe, method: :delete, data: { confirm: "レシピ{#{recipe.name}}を削除します。よろしいですか？"}, class: 'btn btn-danger'
