--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,14 +2,14 @@ doctype html
 html
   head
     title
-      | Myapp
+      | My Recipe App
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
-      .navbar-brand Myapp
+      .navbar-brand My Recipe App
 
       ul.navbar-nav.ml-auto
         - if current_user
@@ -20,7 +20,7 @@ html
         - else
           li.nav-item= link_to 'ログイン', login_path, class: 'nav-link'
       
-    .container
+    .container-sm.mt-5
       - if flash.notice.present?
         .alert.alert-success= flash.notice
       = yield
