--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -2,26 +2,27 @@ h1  レシピ詳細
 
 .nav.justify-content-end
   = link_to '一覧', recipes_path, class: 'nav-link'
-table.table.table-hover
-  tbody
-    tr
-      th= Recipe.human_attribute_name(:id)
-      td= @recipe.id
-    tr
-      th= Recipe.human_attribute_name(:name)
-      td= @recipe.name
-    tr
-      th= Recipe.human_attribute_name(:description)
-      td= simple_format(h(@recipe.description), {}, sanitize: false, wrapper_tag: "div")
-    tr
-      th= Recipe.human_attribute_name(:image)
-      td= image_tag @recipe.image, class: 'img-fluid' if @recipe.image.attached?
-    tr
-      th= Recipe.human_attribute_name(:created_at)
-      td= @recipe.created_at
-    tr
-      th= Recipe.human_attribute_name(:updated_at)
-      td= @recipe.updated_at
-    
-= link_to '編集', edit_recipe_path, class: 'btn btn-primary mr-3'
-= link_to '削除', @recipe, method: :delete, data: { confirm: "レシピ{#{@recipe.name}}を削除します。よろしいですか？"}, class: 'btn btn-danger'
+.table-responsive
+  table.table.table-hover
+    tbody
+      tr
+        th.text-nowrap= Recipe.human_attribute_name(:id)
+        td= @recipe.id
+      tr
+        th.text-nowrap= Recipe.human_attribute_name(:name)
+        td= @recipe.name
+      tr
+        th.text-nowrap= Recipe.human_attribute_name(:description)
+        td= simple_format(h(@recipe.description), {}, sanitize: false, wrapper_tag: "div")
+      tr
+        th.text-nowrap= Recipe.human_attribute_name(:image)
+        td= image_tag @recipe.image, class: 'img-fluid' if @recipe.image.attached?
+      tr
+        th.text-nowrap= Recipe.human_attribute_name(:created_at)
+        td= @recipe.created_at
+      tr
+        th.text-nowrap= Recipe.human_attribute_name(:updated_at)
+        td= @recipe.updated_at
+      
+  = link_to '編集', edit_recipe_path, class: 'btn btn-primary mr-3'
+  = link_to '削除', @recipe, method: :delete, data: { confirm: "レシピ{#{@recipe.name}}を削除します。よろしいですか？"}, class: 'btn btn-danger'
