--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta content="width=device-width, initial-scale=1" name="viewport" /
     title
       | My Recipe App
     = csrf_meta_tags
