--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,6 +1,6 @@
 h1 ユーザーの編集
 
 .nav.justify-content-end
-  = link_to '一覧', admin_users_path, class: 'nav-link'
+  = link_to 'ユーザー一覧へ', admin_users_path, class: 'nav-link btn btn-outline-primary'
 
 = render partial: 'form', locals: { user: @user }
