--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -1,7 +1,7 @@
 h1 ユーザーの詳細
 
-.nav.justyfy-content-end
-  = link_to  "一覧", admin_user_path, class: 'nav-link'
+.nav.justify-content-end.mb-3
+  = link_to "ユーザー一覧へ", admin_users_path, class: 'nav-link btn btn-outline-primary'
 table.table.table-hover
   tbody
     tr
@@ -18,10 +18,10 @@ table.table.table-hover
       td= @user.admin? ? 'あり' : 'なし'
     tr
       th= User.human_attribute_name(:created_at)
-      td= @user.created_at
+      td= l @user.created_at, format: :short
     tr
       th= User.human_attribute_name(:updated_at)
-      td= @user.updated_at
+      td= l @user.updated_at, format: :short
 
 = link_to '編集', edit_admin_user_path, class: 'btn btn-primary mr-3'
 = link_to '削除', [:admin, @user], method: :delete, data: { confirm: "ユーザ「#{@user.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
