--- a/app/views/recipes/edit.html.slim
+++ b/app/views/recipes/edit.html.slim
@@ -1,7 +1,7 @@
 h1 レシピの編集
 
 .nav.justify-content-end
-  = link_to '一覧', recipes_path, class: 'nav-link'
+  = link_to 'レシピ一覧へ', recipes_path, class: 'nav-link btn btn-outline-primary'
 
 / 入力フォーム
 = render partial: 'form', locals: { recipe: @recipe }
