--- a/app/views/recipes/new.html.slim
+++ b/app/views/recipes/new.html.slim
@@ -1,7 +1,7 @@
 h1 レシピを登録する
 
 .nav.justify-content-end
-  = link_to "一覧", recipes_path, class: 'nav-link'
+  = link_to "レシピ一覧へ", recipes_path, class: 'nav-link btn btn-outline-primary'
   
 / 入力フォーム
 = render partial: 'form', locals: { recipe: @recipe }
