--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -23,6 +23,6 @@ h1  レシピ詳細
       tr
         th.text-nowrap= Recipe.human_attribute_name(:updated_at)
         td= l @recipe.updated_at, format: :short
-      
-  = link_to '編集', edit_recipe_path, class: 'btn btn-primary mr-3'
-  = link_to '削除', @recipe, method: :delete, data: { confirm: "レシピ{#{@recipe.name}}を削除します。よろしいですか？"}, class: 'btn btn-danger'
+  - if current_user.id == @recipe.user_id
+    = link_to '編集', edit_recipe_path, class: 'btn btn-primary mr-3'
+    = link_to '削除', @recipe, method: :delete, data: { confirm: "「#{@recipe.name}」のレシピを削除します。よろしいですか？"}, class: 'btn btn-danger'
