--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,11 +9,12 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    .app-title.navbar.navbar-expand-md.navbar-light.bg-light
+    .app-title.navbar.navbar-expand-md.navbar-light.bg-light.fixed-top
       .navbar-brand My Recipe App
-
       ul.navbar-nav.ml-auto
         - if current_user
+          li.nav-item.nav-link
+            span.badge.badge-secondary.= current_user.name
           li.nav-item= link_to 'レシピ一覧', recipes_path, class: 'nav-link'
           - if current_user.admin?
             li.nav-item= link_to 'ユーザー一覧', admin_users_path, class: 'nav-link'
