--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,7 @@ html
       ul.navbar-nav.ml-auto
         - if current_user
           li.nav-item.nav-link
-            span.badge.badge-secondary.= current_user.name
+            span.badge.badge-secondary= current_user.name
           li.nav-item= link_to 'レシピ一覧', recipes_path, class: 'nav-link'
           - if current_user.admin?
             li.nav-item= link_to 'ユーザー一覧', admin_users_path, class: 'nav-link'
